# vec_min

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  smallvec.rs  vec.rs
